now using clojurescript instead of javscript

--- a/picture-gallery/src/picture_gallery/views/templates/base.html
+++ b/picture-gallery/src/picture_gallery/views/templates/base.html
@@ -37,5 +37,9 @@
     {% endblock %}
     {% block content %}
     {% endblock %}
+
+    <script src="{{context}}/js/gallery-cljs.js" type="text/javascript"></script>
+    {% block scripts %}
+    {% endblock %}
   </body>
 </html>
