--- a/picture-gallery/src/picture_gallery/views/templates/gallery.html
+++ b/picture-gallery/src/picture_gallery/views/templates/gallery.html
@@ -1,8 +1,8 @@
 {% extends "picture_gallery/views/templates/base.html" %}
+
 {% block content %}
 <div class="gallery">
   <div id="error"></div>
-  <script src="{{context}}/js/gallery.js" type="text/javascript"></script>
   <div>        
   {% for pic in pictures %}
     <div class="thumbnail">
@@ -19,4 +19,10 @@
   {% endifequal %}
   </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+  gallery.init();
+</script>
 {% endblock %}
